# my-server

./: CLAUDE.md  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: common.h
app/include/server/: command.hpp  pipeline.hpp  server.h  server_hooks.hpp
app/src/: main.cpp
app/test/: CMakeLists.txt
app/test/server/: metrics_mixin_test.cpp  server_components_test.cpp
claude/: plan_implementation_order.md  proposal_dual_pointer_separation.md  proposal_fix_drain_loop_submit.md  proposal_fix_pool_recycled_stress_test.md  proposal_fix_runtime_headers.md  proposal_fix_submit_impl_alloc.md  proposal_flatten_server.md  proposal_freelist_aba.md  proposal_hide_channel_from_user.md  proposal_improvements_publisher.md  proposal_log_engine_pipeline_test.md  proposal_move_impl_to_cpp.md  proposal_new_publisher_tests.md  proposal_publishable_payload_wrapper.md  proposal_publisher_architecture.md  proposal_publisher_runtime.md  proposal_remove_legacy_server.md  proposal_remove_process_fn.md  proposal_remove_publisher_api.md  proposal_resource_store_and_runtime.md  proposal_server_components_tests.md  proposal_split_logger_publisher_libs.md  proposal_split_server_h.md  token_registration_walkthrough.md
include/: ThreadedDatabaseHandler.hpp  event.hpp  httpserver.hpp
include/Interfaces/: IHttpServer.h
include/common/: README.md  log_ids.def  log_ids.hpp
include/common/messages/: log_message.def  log_message.hpp  traits.hpp
include/common/messages/payloads/: log_payloads.def  log_requestpayload.def  payloads.hpp
include/handler/: ConditionVariableDatabaseHandler.hpp  Idatabasehandler.hpp  ThreadedDatabaseHandler.hpp  condition_variable_database_handler.hpp  database_handler_interface.hpp  threaded_database_handler.hpp
include/logger/: Logger.hpp  log_names.hpp  logger.hpp
include/logger/core/: lockfreeQueue.hpp  lockfree_queue.hpp  logEngine.hpp  log_engine.hpp  log_record.hpp  stream_adapter.hpp
include/logger/registry/: builder.hpp  header_args.hpp  payload_register.hpp
include/publisher/: policyPublisher.hpp  publisher.hpp  sinkPublisher.hpp  sink_publisher.hpp
include/publisher/api/: publishable.hpp  publishable_payload.hpp
include/publisher/core/: publisher_types.hpp
include/publisher/runtime/: publisher_runtime.hpp  registration_handle.hpp  resource_store.hpp  token_registry.hpp
include/server/: iServerCRTP.hpp  server.h  server.hpp  server_config.hpp  server_types.hpp  singleThreadServer.hpp  single_thread_server.hpp
include/server/metrics/: Metrics.hpp  metrics.hpp
modules/common/: CMakeLists.txt
modules/common/cmake/: commonConfig.cmake.in
modules/common/include/common/: log_classes.def  log_ids.def
modules/common/include/common/messages/payloads/: payloads.hpp
modules/common/src/: log_names.cpp
modules/common/test/: CMakeLists.txt  log_names_test.cpp
modules/logger/: CMakeLists.txt
modules/logger/cmake/: loggerConfig.cmake.in
modules/logger/include/logger/: logger.hpp
modules/logger/include/logger/core/: lockfree_queue.hpp  log_engine.hpp  stream_adapter.hpp
modules/logger/include/logger/registry/: builder.hpp  payload_register.hpp
modules/logger/src/: log_engine.cpp
modules/logger/test/: CMakeLists.txt  header_args_test.cpp  logger_header_negative_test.cpp
modules/logger/test/core/: log_record_test.cpp
modules/logger/test/payloads/: request_payload_test.cpp
modules/publisher/: CMakeLists.txt
modules/publisher/cmake/: publisherConfig.cmake.in
modules/publisher/include/publisher/: policy_publisher.hpp  sink_publisher.hpp
modules/publisher/include/publisher/core/: publish_token.hpp  publisher_types.hpp
modules/publisher/include/publisher/runtime/: publisher_runtime.hpp  sink_handles.hpp  sink_traits.hpp  token_registry.hpp
modules/publisher/test/: CMakeLists.txt  publisher_test.cpp
modules/publisher/test/policy/: policy_test.cpp
modules/publisher/test/sink/: json_sink_test.cpp
src/: main.cpp  server.cpp
src/handler/: ConditionVariableDatabaseHandler.cpp  ThreadedDatabaseHandler.cpp  condition_variable_database_handler.cpp  threaded_database_handler.cpp
src/logger/: log_names.cpp
src/logger/core/: log_engine.cpp
src/publisher/: sink_publisher.cpp
src/server/: server_hooks.cpp
test/: CMakeLists.txt  test.cpp
test/handler/: condition_variable_handler_test.cpp  threaded_database_handler_test.cpp
test/harness/: stress_builder.hpp
test/integration/: full_pipeline_test.cpp  log_engine_pipeline_test.cpp
test/logger/: header_args_test.cpp  log_names_test.cpp  logger_header_negative_test.cpp  logger_header_smoke_test.cpp
test/logger/core/: StreamAdapter_test.cpp  freelist_test.cpp  log_engine_pipeline_test.cpp  log_record_test.cpp  mpsc_queue_test.cpp  verifiable_engine.hpp
test/logger/integration/: full_pipeline_test.cpp
test/logger/mocks/: MockLogEngine.hpp  MockOutputPolicy.hpp  mock_log_engine.hpp
test/logger/payloads/: builder_test.cpp  payload_base_test.cpp  payload_register_test.cpp  request_payload_test.cpp
test/publisher/: Publisher_test.cpp  publisher_test.cpp
test/publisher/policy/: Policy_test.cpp  policy_test.cpp
test/publisher/runtime/: publisher_runtime_test.cpp
test/publisher/sink/: JsonSink_test.cpp  json_sink_test.cpp  text_sink_test.cpp
test/server/: SingleThreadServer_test.cpp  single_thread_server_extended_test.cpp  single_thread_server_test.cpp
test/stress/: freelist_stress.hpp  freelist_stress_test.cpp  log_engine_stress.hpp  log_engine_stress_test.cpp  mpsc_queue_stress.hpp  mpsc_queue_stress_test.cpp
